[package]
name = "audio_delay_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = [
    "AudioContext",
    "AudioNode",
    "AudioDestinationNode",
    "GainNode",
    "DelayNode",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamConstraints",
    "Navigator",
    "Window",
] }